<resources>
    <string name="app_name" translatable="false">Masar Car Driver</string>
    <string name="google_maps_key" translatable="false">AIzaSyDzT0oICRA3ImAPw8CwoUi0TncNZA_2Gdg</string>
    <string name="googlekey_other" translatable="false">AIzaSyDzT0oICRA3ImAPw8CwoUi0TncNZA_2Gdg</string>
    <string name="log_in_now">Log In Now</string>
    <string name="register">Register</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="france">France</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">LOGIN</string>
    <string name="register_with_email">Register with email</string>
    <string name="log_in">Login</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="register_now">register now</string>
    <string name="by_continuing_you_agree_to_our_terms_of_service_and_privacy_policy">By continuing you agree to our Terms of Service and Privacy Policy</string>
    <string name="send">SEND</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="service_type">Service Type</string>
    <string name="brand">Brand (Auto Suggestion)</string>
    <string name="model">Model (Auto Suggestion)</string>
    <string name="select_year">Select year</string>
    <string name="number_plate">Number plate</string>
    <string name="color">Color</string>
    <string name="next">next</string>
    <string name="upload_vehicle_image">Upload vehicle image</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="code_bic">Code BIC</string>
    <string name="iban">IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="add_account">Add Account</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="home">Home</string>
    <string name="sign_out">Sign out</string>
    <string name="my_profile">my profile</string>
    <string name="my_profile1">My Profile</string>
    <string name="manage_document">manage document</string>
    <string name="manage_docu">Manage Document</string>
    <string name="manage_vehicles">manage vehicles</string>
    <string name="manage_vehicle">Manage vehicle</string>
    <string name="your_trips">your trips</string>
    <string name="bank_details">bank details</string>
    <string name="bank_details1">Bank Details</string>
    <string name="bank_detail">Bank Details</string>
    <string name="payment">payment</string>
    <string name="payment1">Payment</string>
    <string name="my_wallet">my wallet</string>
    <string name="heat_view">heat view</string>
    <string name="heat_view1">Heat View</string>
    <string name="emergency_contact">emergency contact</string>
    <string name="rider_feedback">rider feedback</string>
    <string name="rider_feedback1">Rider Feedback</string>
    <string name="trip_statistics">trip statistics</string>
    <string name="trip_statistic">Trip Statistics</string>
    <string name="need_help">need help?</string>
    <string name="need_help1">Need Help?</string>

    <!-- Key for map -->


    <string name="action_settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="GPSAlertDialogTitle">GPS disabled</string>
    <string name="GPSAlertDialogMessage">" Your GPS is turned off. Please enable it to continue"</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="help">help</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policies</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>
    <string name="available_balance">Available balance</string>
    <string name="withdrawal">withdrawal</string>
    <string name="successfully">Successfully</string>
    <string name="wallet">Wallet</string>
    <string name="cancelled">cancelled</string>
    <string name="ride_history">Ride History</string>
    <string name="your_trip">Your Trip</string>
    <string name="trip_request_date">Trip Request Date</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="start_race">Start The Race</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="emergency">Emergency</string>
    <string name="add_contact">Add Contact</string>
    <string name="you_can_add_up_to_five">You can add up to 5 contacts</string>
    <string name="refuse">refuse</string>
    <string name="accept">accept</string>
    <string name="race_ask">Race ask</string>
    <string name="location_of_taken_in_charge">location of taken in charge</string>
    <string name="destination_address">Destination address</string>
    <string name="completed">completed</string>
    <string name="fare">Fare</string>
    <string name="duration">Duration</string>
    <string name="navigate">Navigate</string>
    <string name="arrived">Arrived</string>
    <string name="slide_to_begin_trip">Slide to begin Trip</string>
    <string name="slide_to_end_trip">Slide to End Trip</string>
    <string name="pick_up_passenger">Pick Up Passenger</string>
    <string name="are_you_sure_you_have_arrived_at_pickup_location_of_passenger">Are you sure you have arrived at pickup location of passenger?</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="trip_complete">Trip Complete</string>
    <string name="current_trip_is_succesfully_visit_again">Current trip is successfully finished. Visit again.</string>
    <string name="ok_thanks">Ok thanks.</string>
    <string name="change">Change</string>
    <string name="your_trip_has_ended">Your trip has ended</string>
    <string name="ok1">Ok</string>
    <string name="total_fare">Total Fare</string>
    <string name="trip_date">Trip Date</string>
    <string name="discount_applied">Discount Applied</string>
    <string name="payment_type">Payment Type  :    </string>
    <string name="please_collect_money_from_rider">Please collect money from rider</string>
    <string name="details">Details</string>
    <string name="base_fare">Base Fare</string>
    <string name="distance">Distance (0.00km)</string>
    <string name="total_amount">Total Amount</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="msg">Message</string>
    <string name="driving_license">Driving License</string>
    <string name="upload_driving_license">Upload Driving License</string>
    <string name="manage">Manage</string>
    <string name="notifications">Notifications</string>


    <string name="network_failure">Sorry! Not connected to internet</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_image_from">Select Image From</string>
    <string name="surname">Surname</string>

     <!-- validation for register-->
    <string name="please_enter_surname">Please enter surname</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email.</string>
    <string name="wrong_email">Can\'t enter worng email.</string>
    <string name="enter_valid_number">Please enter 10 digit phone number.</string>
    <string name="enter_phone_number1">Please enter phone number.</string>
    <string name="please_enter_pass">Please enter password.</string>
    <string name="please_wait">Please wait...</string>
    <string name="password_cant_matched">Password can\'t matched</string>

    <string name="thank_you_for_signing_up">Thank you for signing up!</string>
    <string name="sign_in_successful">Login successful!</string>
    <string name="please_select_service_type">Please select service type</string>
    <string name="please_select_brand">Please select brand</string>
    <string name="please_select_model">Please select model</string>
    <string name="please_enter_year">Please enter year</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number.</string>
    <string name="please_enter_vehicle_color">Please enter vehicle color.</string>
    <string name="enter_account_holder_name">Enter account holder name</string>
    <string name="enter_account_bank_name">Enter bank name</string>
    <string name="enter_bic">Enter BIC</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="enter_iban">Enter IBAN</string>
    <string name="update">Update</string>
    <string name="sur_name">Surname</string>
    <string name="submit">Submit</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="please_upload_vehicle_image">Please upload vehicle image</string>
    <string name="number_of_trips">Number of trips</string>
    <string name="total_earnings">Total Earnings</string>


    <string name="places_api_clients">AIzaSyAdHKrXLBnoiYY1-1XA4ZYeC4v66dXujZE</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="ok">OK</string>
    <string name="alreadylog">You are logged in from a different device. Would you like to log out of the other device?</string>
    <string name="invalidcredential">Invalid Credentials</string>
    <string name="bookingrequest">Booking request</string>
    <string name="newdroppointadded">New drop off location has been added</string>
    <string name="bookingrequestcanceledbyuser">Booking request has been canceled by user</string>
    <string name="newnotificationfromadmin">Notification from admin</string>
    <string name="newmessagecome">Message by rider</string>
    <string name="typemessage">Please type message…</string>
    <string name="collectmoney">Collect Payment</string>
    <string name="support">Support</string>
    <string name="supportmessage">Support Message</string>
    <string name="tostarttrip">Start the trip</string>
    <string name="toendtrip">End the trip</string>
</resources>