<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.cardview.widget.CardView
     android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_12sdp"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_request_date"
            android:textColor="@color/gray_color_100"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"/>


        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="18 Feb 2021 - 07:02 AM"
            android:layout_marginLeft="@dimen/_4sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/poppins_regular"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/pickup_location"
            android:textColor="@color/gray_color_100"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"/>


        <TextView
            android:id="@+id/tvPickupLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1, Thrale Street,\n London, SE19HW, UK"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:singleLine="true"
            android:fontFamily="@font/poppins_regular"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_100"
            android:layout_marginTop="@dimen/_7sdp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_7sdp"
            android:text="@string/destination_location"
            android:textColor="@color/gray_color_100"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins_regular"/>


        <TextView
            android:id="@+id/tvDestinationLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ealing Broadway Shopping \n Centre, London, W55JY, UK"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:singleLine="true"
            android:layout_marginLeft="@dimen/_4sdp"
            android:fontFamily="@font/poppins_regular"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:weightSum="1">

          <androidx.appcompat.widget.AppCompatButton
              android:layout_width="0dp"
              android:layout_height="match_parent"
              android:layout_weight=".48"
              android:text="@string/start_race"
              android:textAllCaps="false"
              android:textSize="@dimen/_12sdp"
              android:fontFamily="@font/poppins_regular"
              android:textColor="@color/white"
              android:background="@drawable/rounded_green_bg"/>


            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".04"/>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".48"
                android:text="@string/cancel_trip"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:background="@drawable/rounded_red_bg"/>



        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
</layout>