<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trip_complete"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_25sdp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/current_trip_is_succesfully_visit_again"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok_thanks"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp"
                android:padding="@dimen/_1sdp"
                />




        </LinearLayout>





    </androidx.cardview.widget.CardView>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/green_right"
        android:layout_above="@+id/cardView"
        android:elevation="@dimen/_10sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-25dp"/>



</RelativeLayout>