<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/changePass">

        <include
            android:id="@+id/header"
            layout="@layout/layout_header" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">


            <EditText
                android:id="@+id/edOldPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/old_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />


            <EditText
                android:id="@+id/edNewPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@+id/edOldPassword"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/new_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />


            <EditText
                android:id="@+id/edConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@+id/edNewPassword"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_10sdp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="18dp" />


            <androidx.cardview.widget.CardView
                android:id="@+id/btnSubmit"
                android:layout_below="@+id/edConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:elevation="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_25sdp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/btn_yello_color">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/submit"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>


    </RelativeLayout>
</layout>