<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/login_bg_color"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <ImageView
                    style="@style/img_logo_main"
                    android:layout_marginTop="@dimen/_20sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_25sdp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/rounded_white_bg">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/labelEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/gray"
                        android:padding="@dimen/_5sdp">

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sdp"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/rounded_white_bg">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/labelPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:backgroundTint="@color/white"
                        android:hint="@string/password"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        android:padding="@dimen/_5sdp"
                        app:hintTextColor="@color/gray">

                        <EditText
                            android:id="@+id/etPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:fontFamily="@font/poppins_medium"
                            android:textSize="@dimen/_12sdp"
                            android:inputType="textPassword"
                            android:imeOptions="actionDone" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tvForgotPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/forgot_your_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/tvForgotPass"
                        android:src="@drawable/right_arrow_red" />

                </RelativeLayout>
                <Button style="@style/btn_primary"
                    android:id="@+id/btn_login"
                    android:text="@string/login"/>

                <RelativeLayout
                    android:id="@+id/rl_link_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:id="@+id/tvDontHave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:padding="@dimen/_5sdp"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="@dimen/_10sdp" />
                    <ImageView
                        android:layout_toEndOf="@+id/tvDontHave"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_centerVertical="true"
                        android:src="@drawable/right_arrow_red"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>